--- a/.gitignore
+++ b/.gitignore
@@ -143,3 +143,5 @@ cython_debug/
 Volunteering/__pycache__/
 templates/
 !/Oppurtunities/templates/Oppurtunities/avalabile_list.html
+!/docker-compose.yml
+!/Dockerfile
